loading trip in chat correctly, with pther user TODO: CSS and alignment

--- a/myCargonaut-client/src/app/chat/chat.component.css
+++ b/myCargonaut-client/src/app/chat/chat.component.css
@@ -110,7 +110,7 @@
 .card-body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: left;
 }
 
 .card-title {
